Map and Registration rotation fixes.